Fix coordinate transforms for centered image

--- a/index.html
+++ b/index.html
@@ -300,16 +300,16 @@
     function screenToWorld(screenX, screenY) {
       const centerX = canvas.width / 2;
       const centerY = canvas.height / 2;
-      const worldX = (screenX - centerX) / zoom - offsetX;
-      const worldY = (screenY - centerY) / zoom - offsetY;
+      const worldX = (screenX - centerX) / zoom - offsetX + img.width / 2;
+      const worldY = (screenY - centerY) / zoom - offsetY + img.height / 2;
       return { x: worldX, y: worldY };
     }
 
     function worldToScreen(worldX, worldY) {
       const centerX = canvas.width / 2;
       const centerY = canvas.height / 2;
-      const screenX = (worldX + offsetX) * zoom + centerX;
-      const screenY = (worldY + offsetY) * zoom + centerY;
+      const screenX = (worldX - img.width / 2 + offsetX) * zoom + centerX;
+      const screenY = (worldY - img.height / 2 + offsetY) * zoom + centerY;
       return { x: screenX, y: screenY };
     }
 
