Make zoom faster (10s) and smoother with easing

--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
       <input type="range" id="pixelGap" min="0" max="1" step="0.05" value="0.5">
     </div>
     <div class="control-group">
-      <label>Zoom Duration: <span id="durationVal">20</span>s</label>
-      <input type="range" id="duration" min="5" max="60" value="20">
+      <label>Zoom Duration: <span id="durationVal">10</span>s</label>
+      <input type="range" id="duration" min="5" max="60" value="10">
     </div>
     <div class="btn-group">
       <button class="btn" id="playPauseBtn">Pause</button>
@@ -166,8 +166,8 @@
 
   <script>
     // ============ CONFIGURATION ============
-    let ZOOM_IN_DURATION = 20000;      // ms - time to zoom in to pixels
-    let ZOOM_OUT_DURATION = 20000;     // ms - time to zoom out from pixels to normal image
+    let ZOOM_IN_DURATION = 10000;      // ms - time to zoom in to pixels
+    let ZOOM_OUT_DURATION = 10000;     // ms - time to zoom out from pixels to normal image
     let MIN_ZOOM = 0.3;                // Zoomed out - normal image view
     let MAX_ZOOM = 15.0;               // Zoomed in - individual pixels visible
 
@@ -385,6 +385,11 @@
     }
 
     // ============ ANIMATION ============
+    // Easing function for smooth animation (ease-in-out)
+    function easeInOutCubic(t) {
+      return t < 0.5 ? 4 * t * t * t : 1 - Math.pow(-2 * t + 2, 3) / 2;
+    }
+
     function updateAnimation() {
       if (!isPlaying) return;
 
@@ -394,11 +399,13 @@
       if (elapsed < ZOOM_OUT_DURATION) {
         // Zoom out from close pixels to normal image
         const t = elapsed / ZOOM_OUT_DURATION;
-        zoom = MAX_ZOOM - (MAX_ZOOM - MIN_ZOOM) * t;
+        const easedT = easeInOutCubic(t);
+        zoom = MAX_ZOOM - (MAX_ZOOM - MIN_ZOOM) * easedT;
       } else if (elapsed < totalDuration) {
         // Zoom in from normal image to close pixels
         const t = (elapsed - ZOOM_OUT_DURATION) / ZOOM_IN_DURATION;
-        zoom = MIN_ZOOM + (MAX_ZOOM - MIN_ZOOM) * t;
+        const easedT = easeInOutCubic(t);
+        zoom = MIN_ZOOM + (MAX_ZOOM - MIN_ZOOM) * easedT;
       } else {
         // Loop - restart from zoomed in
         animStartTime = Date.now();
