--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     const IMAGE_PATH = 'koi.jpg';
     const SAMPLE_STEP = 3;              // Particle density (2=dense, 3=balanced, 4=sparse)
     const DEPTH_RANGE = 4;              // How deep the particle cloud is (Z-axis spread when inside)
-    const IMAGE_SCALE = 8;              // Size of the final image when viewed from far
-    const PARTICLE_SIZE = 0.12;         // Base particle size
+    const IMAGE_SCALE = 12;             // Size of the final image when viewed from far (larger = fills screen better)
+    const PARTICLE_SIZE = 0.15;         // Base particle size (larger for better visibility)
 
     // Camera starting position (center of the cloud)
     const START_POS = { x: 0, y: 0, z: 0 }; // Start at center of cloud
@@ -65,7 +65,7 @@
     scene.background = new THREE.Color(0x000000);
 
     const camera = new THREE.PerspectiveCamera(
-      60,
+      75,  // Wider FOV to see more of the image
       window.innerWidth / window.innerHeight,
       0.1,
       200
@@ -209,9 +209,9 @@
         // Calculate distance from camera to center of cloud
         const distance = camera.position.length();
 
-        // Flatten factor: 0 at center (distance=0), 1 at half distance (distance=7-8)
-        // This makes the image fully resolved sooner
-        const flattenFactor = Math.max(0, Math.min(1, distance / 7));
+        // Flatten factor: 0 at center (distance=0), 1 at distance=10
+        // Image is bigger now so needs slightly more distance to resolve
+        const flattenFactor = Math.max(0, Math.min(1, distance / 10));
 
         // Morph Z positions
         for (let i = 0; i < originalZ.length; i++) {
