--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       const colors = [];
       const sizes = [];
 
-      // Create particles with depth
+      // Create particles with random distribution
       for (let y = 0; y < img.height; y += SAMPLE_STEP) {
         for (let x = 0; x < img.width; x += SAMPLE_STEP) {
           const i = (y * img.width + x) * 4;
@@ -111,19 +111,25 @@
 
           if (a < 0.1) continue; // Skip transparent
 
-          // Image position (X, Y are image coordinates, Z is depth)
-          const px = (x / img.width - 0.5) * IMAGE_SCALE;
-          const py = -(y / img.height - 0.5) * IMAGE_SCALE * (img.height / img.width);
+          // Image position (X, Y are image coordinates, Z=0 for flat)
+          const imgX = (x / img.width - 0.5) * IMAGE_SCALE;
+          const imgY = -(y / img.height - 0.5) * IMAGE_SCALE * (img.height / img.width);
 
-          // Add random depth so particles are scattered in Z
-          // Brighter pixels closer to z=0, darker pixels deeper
-          const brightness = (r + g + b) / 3;
+          // Add random jitter to X and Y for even distribution
+          const jitterX = (Math.random() - 0.5) * (IMAGE_SCALE / img.width) * SAMPLE_STEP;
+          const jitterY = (Math.random() - 0.5) * (IMAGE_SCALE / img.height) * SAMPLE_STEP;
+
+          const px = imgX + jitterX;
+          const py = imgY + jitterY;
+
+          // Random depth for 3D cloud effect
           const pz = (Math.random() - 0.5) * DEPTH_RANGE;
 
           positions.push(px, py, pz);
           colors.push(r * 1.2, g * 1.2, b * 1.2); // Slight brightness boost
 
-          // Size based on brightness
+          // Size based on brightness with variation
+          const brightness = (r + g + b) / 3;
           const size = 0.05 + brightness * 0.05;
           sizes.push(size);
         }
