--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       bottom: 20px;
       left: 50%;
       transform: translateX(-50%);
-      font-size: 14px;
-      color: #999;
+      font-size: 13px;
+      color: #777;
       text-align: center;
       pointer-events: none;
       opacity: 0;
@@ -37,7 +37,7 @@
   </style>
 </head>
 <body>
-  <div id="hint">🖱️ Scroll to zoom • WASD to move</div>
+  <div id="hint">Scroll to zoom • Inside = particle cloud • Outside = clear image</div>
 
   <script type="importmap">
     {
@@ -52,42 +52,49 @@
 
     // ============ CONFIGURATION ============
     const IMAGE_PATH = 'koi.jpg';
-    const SAMPLE_STEP = 1.5;            // Particle density (smaller = more dense)
-    const DEPTH_RANGE = 3;              // How deep the particle cloud is (Z-axis spread when inside)
-    const IMAGE_SCALE = 10;             // Size of the final image when viewed from far
-    const PARTICLE_SIZE = 0.1;          // Base particle size (smaller for finer detail)
 
-    // Camera starting position (center of the cloud)
-    const START_POS = { x: 0, y: 0, z: 0 }; // Start at center of cloud
+    // Particle density - sample almost every pixel for maximum clarity
+    const SAMPLE_STEP = 2;
+
+    // Depth range when in cloud mode (scattered in Z)
+    const CLOUD_DEPTH = 6;
+
+    // Starting position - inside the cloud
+    const START_CAMERA_Z = 0;
+
+    // Distance where image is fully resolved and clear
+    const IMAGE_VIEW_DISTANCE = 8;
+
+    // Particle appearance
+    const PARTICLE_SIZE = 0.06;
 
     // ============ SCENE SETUP ============
     const scene = new THREE.Scene();
     scene.background = new THREE.Color(0x000000);
 
     const camera = new THREE.PerspectiveCamera(
-      75,  // Wider FOV to see more of the image
+      60,
       window.innerWidth / window.innerHeight,
       0.1,
-      200
+      100
     );
-    camera.position.set(START_POS.x, START_POS.y, START_POS.z);
+    camera.position.z = START_CAMERA_Z;
     camera.lookAt(0, 0, 0);
 
     const renderer = new THREE.WebGLRenderer({ antialias: true });
     renderer.setSize(window.innerWidth, window.innerHeight);
-    renderer.setPixelRatio(window.devicePixelRatio);
+    renderer.setPixelRatio(Math.min(window.devicePixelRatio, 2));
     document.body.appendChild(renderer.domElement);
 
-    console.log('Scene initialized');
-
-    // ============ LOAD IMAGE & CREATE PARTICLES ============
+    // ============ LOAD IMAGE ============
     const img = new Image();
-    let particles = null;
+    let points = null;
+    let originalCloudZ = null;
 
     img.onload = () => {
-      console.log('Image loaded:', img.width, 'x', img.height);
+      console.log(`Image loaded: ${img.width}x${img.height}`);
 
-      // Sample pixels from image
+      // Sample image pixels
       const canvas = document.createElement('canvas');
       canvas.width = img.width;
       canvas.height = img.height;
@@ -95,12 +102,17 @@
       ctx.drawImage(img, 0, 0);
       const imageData = ctx.getImageData(0, 0, img.width, img.height);
 
-      const geometry = new THREE.BufferGeometry();
       const positions = [];
       const colors = [];
-      const sizes = [];
+      const cloudZPositions = [];
 
-      // Create particles with random distribution
+      // Calculate scale to fit nicely in view
+      const aspect = img.height / img.width;
+      const imageWidth = 8;
+      const imageHeight = imageWidth * aspect;
+
+      // Sample pixels densely
+      let particleCount = 0;
       for (let y = 0; y < img.height; y += SAMPLE_STEP) {
         for (let x = 0; x < img.width; x += SAMPLE_STEP) {
           const i = (y * img.width + x) * 4;
@@ -111,91 +123,48 @@
 
           if (a < 0.1) continue; // Skip transparent
 
-          // Image position (X, Y are image coordinates, Z=0 for flat)
-          const imgX = (x / img.width - 0.5) * IMAGE_SCALE;
-          const imgY = -(y / img.height - 0.5) * IMAGE_SCALE * (img.height / img.width);
+          // Image position (X, Y for image, Z will morph)
+          const px = (x / img.width - 0.5) * imageWidth;
+          const py = -(y / img.height - 0.5) * imageHeight;
 
-          // Add random jitter to X and Y for even distribution
-          const jitterX = (Math.random() - 0.5) * (IMAGE_SCALE / img.width) * SAMPLE_STEP;
-          const jitterY = (Math.random() - 0.5) * (IMAGE_SCALE / img.height) * SAMPLE_STEP;
+          // Store cloud Z (random depth) separately
+          const cloudZ = (Math.random() - 0.5) * CLOUD_DEPTH;
 
-          const px = imgX + jitterX;
-          const py = imgY + jitterY;
-
-          // Random depth for 3D cloud effect
-          const pz = (Math.random() - 0.5) * DEPTH_RANGE;
-
-          positions.push(px, py, pz);
-          colors.push(r, g, b); // Use original colors, no boost
-
-          // Size based on brightness with variation
-          const brightness = (r + g + b) / 3;
-          const size = 0.05 + brightness * 0.05;
-          sizes.push(size);
+          positions.push(px, py, 0); // Start flat at Z=0
+          colors.push(r, g, b);
+          cloudZPositions.push(cloudZ);
+          particleCount++;
         }
       }
 
-      console.log(`Created ${positions.length / 3} particles`);
+      console.log(`Created ${particleCount} particles`);
 
-      // Shuffle particles to avoid systematic ordering bias
-      const particleCount = positions.length / 3;
-      const indices = Array.from({ length: particleCount }, (_, i) => i);
+      // Create geometry
+      const geometry = new THREE.BufferGeometry();
+      geometry.setAttribute('position', new THREE.Float32BufferAttribute(positions, 3));
+      geometry.setAttribute('color', new THREE.Float32BufferAttribute(colors, 3));
 
-      // Fisher-Yates shuffle
-      for (let i = indices.length - 1; i > 0; i--) {
-        const j = Math.floor(Math.random() * (i + 1));
-        [indices[i], indices[j]] = [indices[j], indices[i]];
-      }
+      // Store cloud Z positions for morphing
+      originalCloudZ = new Float32Array(cloudZPositions);
 
-      const shuffledPositions = new Float32Array(positions.length);
-      const shuffledColors = new Float32Array(colors.length);
-      const shuffledSizes = new Float32Array(sizes.length);
-
-      for (let i = 0; i < particleCount; i++) {
-        const srcIdx = indices[i];
-        shuffledPositions[i * 3] = positions[srcIdx * 3];
-        shuffledPositions[i * 3 + 1] = positions[srcIdx * 3 + 1];
-        shuffledPositions[i * 3 + 2] = positions[srcIdx * 3 + 2];
-        shuffledColors[i * 3] = colors[srcIdx * 3];
-        shuffledColors[i * 3 + 1] = colors[srcIdx * 3 + 1];
-        shuffledColors[i * 3 + 2] = colors[srcIdx * 3 + 2];
-        shuffledSizes[i] = sizes[srcIdx];
-      }
-
-      geometry.setAttribute('position', new THREE.Float32BufferAttribute(shuffledPositions, 3));
-      geometry.setAttribute('color', new THREE.Float32BufferAttribute(shuffledColors, 3));
-      geometry.setAttribute('size', new THREE.Float32BufferAttribute(shuffledSizes, 1));
-
-      // Material with custom size attribute
+      // Material
       const material = new THREE.PointsMaterial({
         size: PARTICLE_SIZE,
         vertexColors: true,
         transparent: true,
-        opacity: 0.4,  // Lower opacity to prevent oversaturation with dense particles
+        opacity: 0.8,
         sizeAttenuation: true,
-        blending: THREE.NormalBlending,
-        depthWrite: false,
-        depthTest: true  // Ensure particles render in correct depth order
+        depthWrite: false
       });
 
-      // Store original Z positions for morphing
-      const originalZ = new Float32Array(positions.length / 3);
-      for (let i = 0; i < positions.length / 3; i++) {
-        originalZ[i] = positions[i * 3 + 2];
-      }
-      geometry.userData.originalZ = originalZ;
-
-      particles = new THREE.Points(geometry, material);
-      scene.add(particles);
-
-      console.log('Particles added to scene');
+      points = new THREE.Points(geometry, material);
+      scene.add(points);
 
       // Show hint
       setTimeout(() => {
         document.getElementById('hint').classList.add('show');
       }, 500);
 
-      // Start animation
       animate();
     };
 
@@ -206,64 +175,55 @@
 
     img.src = IMAGE_PATH;
 
-    // ============ CONTROLS ============
-    const moveSpeed = 0.1;
-    const keys = {};
-
-    window.addEventListener('keydown', (e) => keys[e.key.toLowerCase()] = true);
-    window.addEventListener('keyup', (e) => keys[e.key.toLowerCase()] = false);
+    // ============ INTERACTION ============
+    let targetCameraZ = START_CAMERA_Z;
 
     window.addEventListener('wheel', (e) => {
       e.preventDefault();
-      // Move forward/backward on scroll
-      const forward = new THREE.Vector3(0, 0, 1);
-      forward.applyQuaternion(camera.quaternion);
-      camera.position.addScaledVector(forward, e.deltaY * 0.01);
+      targetCameraZ += e.deltaY * 0.01;
+      targetCameraZ = Math.max(-2, Math.min(15, targetCameraZ));
     }, { passive: false });
 
-    // ============ ANIMATION LOOP ============
+    // WASD controls
+    const keys = {};
+    window.addEventListener('keydown', (e) => keys[e.key.toLowerCase()] = true);
+    window.addEventListener('keyup', (e) => keys[e.key.toLowerCase()] = false);
+
+    // ============ ANIMATION ============
     function animate() {
       requestAnimationFrame(animate);
 
+      if (!points || !originalCloudZ) return;
+
+      // Smooth camera movement
+      camera.position.z += (targetCameraZ - camera.position.z) * 0.08;
+
       // WASD movement
+      const moveSpeed = 0.1;
       if (keys['w']) camera.position.z += moveSpeed;
       if (keys['s']) camera.position.z -= moveSpeed;
       if (keys['a']) camera.position.x -= moveSpeed;
       if (keys['d']) camera.position.x += moveSpeed;
-      if (keys['q']) camera.position.y += moveSpeed;
-      if (keys['e']) camera.position.y -= moveSpeed;
 
-      // Flatten particles as camera moves away for clearer image
-      if (particles && particles.geometry.userData.originalZ) {
-        const positions = particles.geometry.attributes.position.array;
-        const originalZ = particles.geometry.userData.originalZ;
+      // Calculate morph factor
+      // At z=0 (inside): morphFactor = 0 (full cloud)
+      // At z=IMAGE_VIEW_DISTANCE: morphFactor = 1 (flat image)
+      const distance = camera.position.z;
+      let morphFactor = distance / IMAGE_VIEW_DISTANCE;
+      morphFactor = Math.max(0, Math.min(1, morphFactor));
 
-        // Calculate distance from camera to center of cloud
-        const distance = camera.position.length();
+      // Apply easing for smooth transition
+      morphFactor = morphFactor * morphFactor * (3 - 2 * morphFactor); // Smoothstep
 
-        // Flatten factor: 0 at center (distance=0), 1 at distance=4
-        const flattenFactor = Math.max(0, Math.min(1, distance / 4));
-
-        // Morph Z positions - flatten aggressively
-        for (let i = 0; i < originalZ.length; i++) {
-          positions[i * 3 + 2] = originalZ[i] * (1 - flattenFactor * 0.95);
-        }
-
-        particles.geometry.attributes.position.needsUpdate = true;
-
-        // Adjust material based on distance
-        const material = particles.material;
-
-        // Always use normal blending for true colors
-        material.blending = THREE.NormalBlending;
-
-        // Keep opacity constant for consistent brightness
-        material.opacity = 0.4;
-
-        // Make particles LARGER as you zoom out so image stays detailed
-        // This compensates for perspective making them appear smaller
-        material.size = PARTICLE_SIZE * (1 + flattenFactor * 0.6);
+      // Morph particle Z positions
+      const positions = points.geometry.attributes.position.array;
+      for (let i = 0; i < originalCloudZ.length; i++) {
+        // Interpolate between cloud depth and flat (z=0)
+        // morphFactor=0: use cloudZ (scattered)
+        // morphFactor=1: use 0 (perfectly flat image)
+        positions[i * 3 + 2] = originalCloudZ[i] * (1 - morphFactor);
       }
+      points.geometry.attributes.position.needsUpdate = true;
 
       renderer.render(scene, camera);
     }
