Quadruple Z-depth distribution - cloud depth from 6 to 24 units

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     const SAMPLE_STEP = 2;
 
     // Depth range when in cloud mode (scattered in Z)
-    const CLOUD_DEPTH = 6;
+    const CLOUD_DEPTH = 24;  // 4x the original depth (was 6)
 
     // Starting position - inside the cloud
     const START_CAMERA_Z = 0;
