Revert "Start at front edge of particle cloud (z=-12) instead of center"
This reverts commit 9bb56df8258fc2fd7ad4bd3f9d58c1d3475b447f.

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     // Depth range when in cloud mode (scattered in Z)
     const CLOUD_DEPTH = 24;  // 4x the original depth (was 6)
 
-    // Starting position - at the front edge of the cloud
-    const START_CAMERA_Z = -12;  // Front edge (cloud spans from -12 to +12)
+    // Starting position - inside the cloud
+    const START_CAMERA_Z = 0;
 
     // Distance where image is fully resolved and clear
     const IMAGE_VIEW_DISTANCE = 15;
