Replace koi image with tobias-keller-73F4pKoUkM0-unsplash.jpg

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     import * as THREE from 'three';
 
     // ============ CONFIGURATION ============
-    const IMAGE_PATH = 'koi.jpg';
+    const IMAGE_PATH = 'tobias-keller-73F4pKoUkM0-unsplash.jpg';
 
     // Particle density - sample almost every pixel for maximum clarity
     const SAMPLE_STEP = 2;
